# personal-assistant

./: Cargo.toml  README.md  Trunk.toml  package-lock.json  tailwind.config.js
.github/workflows/: tauri.yml
docs/assets/: demo.webm
public/: index.html  styles.css
src/: app.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: log.rs  main.rs
src-tauri/src/db/: logic.rs  mod.rs
src-tauri/src/model/: logic.rs  mod.rs  simulated.rs
src/components/: chat.rs  mod.rs  nav_bar.rs
src/pages/: conversation.rs  mod.rs  setting.rs
