[package]
name = "personal-assistant-ui"
version = "0.0.1"
edition = "2021"
authors = ["Mourad Lablack <mouradost@gmail.com>"]
description = "Personal assistant is an APP that allows the user to use widely distributed open source Large Language Modes (LLM) on a personal computer."
homepage = "https://github.com/Mouradost/personal-assistant"
repository = "https://github.com/Mouradost/personal-assistant" 
license = "GNU GPLv3" 
keywords = ["full-stack", "assistant", "AI", "LLM"]
categories = ["APP"]
include = ["LICENSE"]

[dependencies]
# Frontend framwork
leptos = { version = "0.4", features = ["csr", "nightly"] }
# Routing
leptos_router = { version = "0.4", features = ["csr", "nightly"] }
# HTML meta-data
leptos_meta = { version = "0.4", features = ["csr", "nightly"] }
# Icons
leptos_icons = { git = "https://github.com/Carlosted/leptos-icons.git" , branch = "main", features = [
  "macros",
  "BsSendFill",
  "BsMoon",
  "BsSun",
  "CgDarkMode",
  "CgMenu",
  "BiUploadRegular",
  "AiDeleteOutlined",
  "BsFileEarmarkBinary",
  "BsDatabaseAdd"
] }
# Json
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
# Enums as string
strum = { version = "0.25", features = ["derive"] }
# Wasm 
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
# Futures
futures = "0.3"
# Javascript premitive
js-sys = "0.3"
# Tauri API
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"]}
# Time
chrono = "0.4"

[workspace]
members = ["src-tauri"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

