[package]
name = "personal-assistant"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
# Backend
tauri = { version = "1.4", features = [ "os-all", "updater", "dialog-message", "shell-open"] }
# Database
surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", features = ["kv-mem"] }
# For persistant database for now it is disabled because of build issues on macos and windows
# surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", features = ["kv-rocksdb"] }

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Random numbers generator
rand = "0.8"
# AI lib for LLM models (Large Language Models)
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2" # For file output

[features]
custom-protocol = ["tauri/custom-protocol"]
