[package]
name = "personal-assistant"
version = "0.0.2"
edition = "2021"
authors = ["Mourad Lablack <mouradost@gmail.com>"]
homepage = "https://github.com/Mouradost/personal-assistant"
repository = "https://github.com/Mouradost/personal-assistant" 
license = "GNU GPLv3" 
keywords = ["full-stack", "assistant", "AI", "LLM"]
categories = ["APP"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
# Backend
tauri = { version = "1.4", features = [ "dialog-ask", "dialog-open", "dialog-confirm", "os-all", "updater", "dialog-message", "shell-open"] }
# Database
surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", features = ["kv-mem"] }
# For persistant database for now it is disabled because of build issues on macos and windows
# surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", features = ["kv-rocksdb"] }

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Random numbers generator
rand = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2" # For file output

# AI lib for LLM models (Large Language Models)
[target.'cfg(target_os = "macos")'.dependencies]
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
# GPU support "cublas"
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["cublas"] } 
# CPU only
# llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [] } 

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.ggml-sys]
opt-level = 3
